--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cat-milk.github.io/Anime-Girls-Holding-Programming-Books/static/de50ab96ebd3bb4272f73d4d053f50eb/f945d/Murakami_Shiina_Holding_Computer_C_Programming_Language.png"
+    />
   </head>
   <body>
     <div class="h-screen p-3 flex items-center justify-center">
@@ -181,5 +187,4 @@
       </div>
     </div>
   </body>
-  <script src="https://cdn.tailwindcss.com"></script>
 </html>
