--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 >
                   <li>
                     <a
-                      href="#"
+                      href="https://www.fathin.my.id"
                       class="text-lg block py-2 px-3 text-white rounded md:bg-transparent md:p-0 hover:text-blue-200"
                       aria-current="page"
                       >Website</a
@@ -60,21 +60,21 @@
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="https://www.fathin.my.id/#"
                       class="text-lg block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-200 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                       >About</a
                     >
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="https://www.fathin.my.id/#services"
                       class="text-lg block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-200 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                       >Services</a
                     >
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="https://www.fathin.my.id/#who"
                       class="text-lg block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-200 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                       >Contact
                     </a>
