--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </p>
                   </div>
                   <a
-                    href="https://www.fathin.my.id"
+                    href="https://www.instagram.com/mfathin_halim/"
                     class="bg-orange-300 hover:bg-orange-200 border border-2 border-gray-500 text-black p-2 w-fit rounded-full"
                     ><i class="fa-brands fa-instagram"></i> Fathin's
                     instagram</a
