--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
                   <div
                     class="border border-gray-500 hover:bg-gray-700 text-center justify-content-center align-center lg:border-gray-400 bg-gray-600 rounded-xl p-4"
                   >
-                    <h1 class="text-4xl font-bold text-center">
-                      I use arch 🇵🇸
-                    </h1>
+                    <a
+                      href="https://www.mosquefund.org/causes/palestine-relief?gad_source=1&gclid=Cj0KCQjw6PGxBhCVARIsAIumnWbIrLZMlujKFsGf5LhY-MEId3QtXm-opVGTka9rW873x1xThuyS3GQaAjcFEALw_wcB"
+                      class="text-4xl font-bold text-center"
+                    >
+                      Free Palestine 🇵🇸
+                    </a>
                   </div>
                   <div
                     class="border hover:bg-yellow-100 bg-yellow-200 text-black mt-2 border-gray-400 text-center flex justify-content-center align-center lg:border-gray-400 bg-gray-600 rounded-xl p-4"
