--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
       type="image/x-icon"
       href="https://cat-milk.github.io/Anime-Girls-Holding-Programming-Books/static/de50ab96ebd3bb4272f73d4d053f50eb/f945d/Murakami_Shiina_Holding_Computer_C_Programming_Language.png"
     />
+    <meta property="og:title" content="M.Fathin Halim" />
+    <meta
+      property="og:description"
+      content="Situs portofolio dan informasi seorang indie developer."
+    />
   </head>
-  <body>
-    <div class="h-screen p-3 flex items-center justify-center">
+  <body class="flex flex-row min-h-screen justify-center items-center">
+    <div class="p-3 flex items-center justify-center">
       <div class="rounded shadow-lg mx-auto">
         <div class="bg-gray-600 p-6 rounded-3xl border border-gray-400">
           <nav class="w-full z-20">
@@ -90,10 +95,10 @@
                 <div
                   class="border border-gray-400 lg:border-gray-400 text-black bg-gray-100 rounded-3xl p-4 flex flex-col w-full justify-between leading-normal"
                 >
-                  <div class="lg:flex p-2">
+                  <div class="lg:flex p-2 justify-content-center flex-row">
                     <img
                       src="https://www.fathin.my.id/aa.jpg"
-                      class="hidden lg:block mr-5 lg:mr-10 rounded-full shadow-2xl border border-gray-700 border-2"
+                      class="mb-2 lg:mb-0 mr-5 lg:mr-10 rounded-full shadow-2xl border border-gray-700 border-2"
                       style="
                         height: 100%;
                         width: 100%;
