ganti dikit gak ngaruh

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="M.Fathin Halim" />
     <meta
       property="og:description"
-      content="Situs portofolio dan informasi seorang indie developer."
+      content="Kartu Nama Online dari M.Fathin Halim"
     />
   </head>
   <body class="flex flex-row min-h-screen justify-center items-center">
